--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="icon" type="image/svg+xml" href="./src/assets/favicon.ico" />
       <title>Blizzard | BRChallenges</title>
    </head>
-   <body>
+   <body class="text-white">
       <div id="root"></div>
       <script type="module" src="/src/main.jsx"></script>
    </body>
